# meh-api

./: .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  asgi.py  door_pub_key.asc  pullAndMigrate.sh  pyproject.toml  requirements.txt  runserver.sh  settings.py  urls.py  wsgi.py
.github/workflows/: test.yaml
api/: admin.py  serializers.py
api/migrations/: 0001_initial.py  0002_userprofile.py  0003_rename_userprofile_ledprofile.py  0004_ledprofile_otp_secret.py  0005_payment_userprofile_delete_ledprofile_and_more.py  0006_remove_userprofile_user_delete_payment_and_more.py
api/models/: base.py  iot.py  sensor.py  user.py
api/tests/: helpers.py
api/views/: auth.py  iot.py  sensor_views.py
base/: base.html
ledapp/: forms.py  models.py  views.py
ledapp/migrations/: 0001_initial.py
ledapp/templates/: led.html
meh_api/: manage.py
meh_api/meh_api/: asgi.py  settings.py  wsgi.py
mehmberportal/: apps.py  forms.py  models.py  urls.py  views.py
mehmberportal/migrations/: 0001_initial.py
mehmberportal/templates/: base.html
mehmberprofile/: admin.py  apps.py  forms.py  models.py  views.py
mehmberprofile/migrations/: 0001_initial.py  0002_rename_userprofile_mehmberprofile.py  0002_userprofile_led_number.py  0003_membershiphistory.py  0003_payment_user.py  0004_memberprofile_paymenthistory_remove_payment_user_and_more.py  0004_remove_membershiphistory_date_and_more.py  0005_alter_paymenthistory_date.py  0005_remove_membershiphistory_amount_and_more.py  0006_remove_memberprofile_hackerspace_rgb_and_more.py  0008_alter_userprofile_led_number.py  (+8 more)
(+10 files in other folders)
